test/spec_vectors/func/fail/module_38.wat
(module (func $type-return-last-empty-vs-nums (result i32 i32) (return)))